# limit-order-book-engine

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
benches/: order_book_benchmark.rs
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Header.tsx  LiveFeed.tsx  MyOrders.tsx  OrderBook.tsx  OrderForm.tsx  TradeFeed.tsx
frontend/src/hooks/: useMyOrders.ts  useOrderBookSocket.ts  useOrderBookWebSocket.ts  useTradeFeed.ts  useTradeWebSocket.ts
frontend/src/state/: atoms.ts
frontend/src/styles/: globals.css  orderbook.css  theme.ts
frontend/src/types/: index.ts
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: api_server.rs  lib.rs  main.rs  manual_benchmark.rs  order.rs  order_book.rs  orderbook.rs
tests/: integration_tests.rs
