[package]
name = "limit-order-book-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
arrayvec = "0.7"

[dev-dependencies]
criterion = "0.5"  # for benchmarking

[lib]
name = "limit_order_book_engine"
path = "src/lib.rs"

[[bench]]
name = "order_book_benchmark"
harness = false

[[bin]]
name = "manual_benchmark"
path = "src/manual_benchmark.rs"
