[package]
name = "limit-order-book-engine"
version = "0.1.0"
edition = "2024"#

[dependencies]
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
arrayvec = "0.7"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
hyper = "1.6.0"
axum-macros = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
criterion = "0.5"  # for benchmarking

[lib]
name = "limit_order_book_engine"
path = "src/lib.rs"

[[bench]]
name = "order_book_benchmark"
harness = false

[[bin]]
name = "manual_benchmark"
path = "src/manual_benchmark.rs"

[[bin]]
name = "api_server"
path = "src/api_server.rs"