[package]
name = "limit-order-book-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"

# Axum & Web
axum = { version = "0.7", features = ["ws"] }
axum-macros = "0.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.6"

# WebSocket & Async
tokio-tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3"

# CLI & CSV (still useful for benchmarking)
clap = { version = "4.5", features = ["derive"] }
csv = "1.2"
arrayvec = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "limit_order_book_engine"
path = "src/lib.rs"

[[bench]]
name = "order_book_benchmark"
harness = false

[[bin]]
name = "manual_benchmark"
path = "src/manual_benchmark.rs"


